--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-filter = "^24.2"
 oauthlib = "^3.2.2"
 pyjwt = "^2.8.0"
 requests = "^2.32.3"
+python-dotenv = "^1.0.1"
+pillow = "^10.4.0"
 
 
 [build-system]
